kubernetes/infra/network/gateway/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: ${gateway_internal_ip}
  listeners:
    - protocol: HTTP
      port: 80
      name: http-gateway
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.${cluster_domain}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ${wildcard_cert_name}
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: ${cluster_domain}
      tls:
        certificateRefs:
          - kind: Secret
            name: ${wildcard_cert_name}
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: synology-https-gateway
      hostname: synology.petebeegle.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: synology-petebeegle-com
      allowedRoutes:
        namespaces:
          from: All
