kubernetes/infra/network/gateway/gateway-passthrough.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: passthrough
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: ${gateway_passthrough_ip}
  listeners:
    - protocol: TLS
      port: 443
      name: tls-passthrough
      hostname: "*.${cluster_domain}"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TLS
      port: 443
      name: pve01-passthrough
      hostname: "pve01.petebeegle.com"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TLS
      port: 443
      name: pve02-passthrough
      hostname: "pve02.petebeegle.com"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TLS
      port: 443
      name: pve03-passthrough
      hostname: "pve03.petebeegle.com"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TLS
      port: 443
      name: pve04-passthrough
      hostname: "pve04.petebeegle.com"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TLS
      port: 443
      name: unifi-passthrough
      hostname: "unifi.petebeegle.com"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
