kubernetes/infra/network/gateway/https-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      sectionName: http-gateway
    - name: external
      sectionName: http-gateway
  hostnames:
    - "*.${cluster_domain}"
    - ${cluster_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
